fix: overflow style for IE11(code plugin)

--- a/plugins/code-syntax-highlight/src/css/plugin.css
+++ b/plugins/code-syntax-highlight/src/css/plugin.css
@@ -1,3 +1,8 @@
+/* prevent to create draggable box in IE with prism */
+pre[class*="language-"] {
+  overflow: visible;
+}
+
 .toastui-editor-ww-code-block-highlighting {
   position: relative;
 }
